--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -15,6 +15,9 @@ permissions:
   contents: read
 
 env:
+  TF_VAR_SYSTEM_NAME: ${{ vars.SYSTEM_NAME }}
+  TF_VAR_REGION: ${{ vars.REGION }}
+  TF_VAR_LAYER_ARN_BASE: ${{ vars.LAYER_ARN_BASE }}
   TF_VAR_SLACK_INCOMING_WEBHOOK_ERROR_NOTIFIER_01: ${{ secrets.SLACK_INCOMING_WEBHOOK_ERROR_NOTIFIER_01 }}
 
 jobs:
@@ -28,7 +31,7 @@ jobs:
       - uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.ROLE_ARN_GITHUB_ACTION }}
-          aws-region: ap-northeast-1
+          aws-region: ${{ vars.REGION }}
       - run: terraform init
       - name: terraform plan
         run: terraform plan
