--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ aws-lambda-powertools = {version = "3.1.0", extras = ["all"]}
 
 [tool.poetry.group.base_layer.dependencies]
 boto3 = "1.35.39"
-boto3-stubs = {version = "1.35.39", extras = ["dynamodb", "events", "s3", "sqs"]}
+boto3-stubs = {version = "1.35.39", extras = ["events"]}
 aws-cloudwatch-logs-url = "1.0.3"
 
 [tool.poetry.group.dev.dependencies]
